--- a/Reto0DIN/src/properties/config.properties
+++ b/Reto0DIN/src/properties/config.properties
@@ -1,5 +1,5 @@
 DB=reto0din
-Conn=jdbc:mysql://localhost:3306/reto0din
-DBUser=root
-DBPass=abcd*1234
+URL=jdbc:mysql://localhost:3306/reto0din
+USER=root
+PASSWORD=abcd*1234
 Driver=com.mysql.jdbc.Driver
