--- a/Reto0DIN/src/properties/view.properties
+++ b/Reto0DIN/src/properties/view.properties
@@ -3,6 +3,6 @@
 # and open the template in the editor.
 
 # View Type Selection
-View_Type=Text
+#View_Type=Text
 #View_Type=Swing
-#View_Type=JavaFX
+View_Type=JavaFX
