--- a/Reto0DIN/nbproject/project.properties
+++ b/Reto0DIN/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.mysql-connector-java-8.0.26.jar=C:\\Program Files (x86)\\MySQL\\C
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.26.jar}
+    ${file.reference.mysql-connector-java-8.0.26.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
